--- a/项目介绍.md
+++ b/项目介绍.md
@@ -1,16 +1,17 @@
-# 全民网一站式购物平台
+# 
 
-## 项目介绍：全民网是一款家居销售的网站，全民网有着丰富的家具和家装产品，丰富多样的家具能给您带来丰富的选择，用全民网买家具能让您挑到满意的家具
+## 项目介绍：币源社区是一个让更多的用户了解数字货币行业，并建立透明的行业数据资料库以及公平公正的交易平台体验评级系统，展示及推动区块链相关创新项目，在数字货币与区块链项目发行方、交易平台以及投资者之间建立互动沟通的桥梁的一个平台
 
 ## 演示
 
-* 官网：<http://m.quanmingwang.com/index/index.html>;
+* 官网：<https://www.coingogo.com/>;
 
-* 上线网址:<http://120.76.130.35:3435>;
+* 上线网址:<http://182.92.109.17:4565>;
 
 * 后台管理网址:<http://182.92.109.17:4564>;
 
-## git仓库地址:https://github.com/gzh51910/quanmin.git
+## git仓库地址: <https://github.com/gzh51910/biyuan.git>
+
 ## 团队与分工
 
 ### 团队
@@ -18,20 +19,48 @@
 * 组长：张国澍，成员：韦莹莹，陈少彬，林建明
 * 负责模块说明：
 * 张国澍：编写接口/后台管理系统/项目注册功能实现
-    * 管理员：13246466649     密码：123456
+* 管理员：13246466649     密码：123456
 * 陈少彬：负责项目主页公共模块和论坛模块
 * 林建明：资讯模块
 * 韦莹莹：登录注册我的 币数据模块
 
-## 项目页面截图
+## 后台管理系统页面截图
+
+### 用户管理页面
+
+* ![Image text](https://github.com/gzh51910/biyuan/blob/dev/%E5%9B%BE%E7%89%87%E5%B1%95%E7%A4%BA/%E5%90%8E%E5%8F%B0%E7%94%A8%E6%88%B7%E7%AE%A1%E7%90%86%E7%95%8C%E9%9D%A2.png)
+
+### 用户登录页面
+
+* ![Image text](https://github.com/gzh51910/biyuan/blob/dev/%E5%9B%BE%E7%89%87%E5%B1%95%E7%A4%BA/%E5%90%8E%E5%8F%B0%E7%AE%A1%E7%90%86%E7%B3%BB%E7%BB%9F%E7%99%BB%E5%BD%95%E7%95%8C%E9%9D%A2.png)
+
+### app
+
+### 币数据
+
+* ![Image text](https://github.com/gzh51910/biyuan/blob/dev/%E5%9B%BE%E7%89%87%E5%B1%95%E7%A4%BA/%E5%B8%81%E6%95%B0%E6%8D%AE.png)
+
+### 我的
+
+* ![Image text](https://github.com/gzh51910/biyuan/blob/dev/%E5%9B%BE%E7%89%87%E5%B1%95%E7%A4%BA/%E6%88%91%E7%9A%84.png)
+
+### 泡论坛页
+
+* ![Image text](https://github.com/gzh51910/biyuan/blob/dev/%E5%9B%BE%E7%89%87%E5%B1%95%E7%A4%BA/%E6%B3%A1%E8%AE%BA%E5%9D%9B%E9%A1%B5.png)
+
+### 注册
+
+* ![Image text](https://github.com/gzh51910/biyuan/blob/dev/%E5%9B%BE%E7%89%87%E5%B1%95%E7%A4%BA/%E6%B3%A8%E5%86%8C.png)
+
+### 资讯页
+
+* ![Image text](https://github.com/gzh51910/biyuan/blob/dev/%E5%9B%BE%E7%89%87%E5%B1%95%E7%A4%BA/%E8%B5%84%E8%AE%AF%E9%A1%B5.png)
+
 ### 首页
-* ![Image text](https://github.com/gzh51910/quanmin/blob/dev/%E9%A1%B9%E7%9B%AE%E6%88%AA%E5%9B%BE/%E9%A6%96%E9%A1%B5.png)
 
-### 列表页
+* ![Image text](https://github.com/gzh51910/biyuan/blob/dev/%E5%9B%BE%E7%89%87%E5%B1%95%E7%A4%BA/%E9%A6%96%E9%A1%B5.png)
 
-* ![Image text](https://github.com/gzh51910/quanmin/blob/dev/%E9%A1%B9%E7%9B%AE%E6%88%AA%E5%9B%BE/%E5%95%86%E5%93%81%E5%88%97%E8%A1%A8%E9%A1%B5.png)
-
-
+### 我的
 
 
 ├─demo                  //前端文件夹
